# AFLplusplus-protobuf-mutator

./: .gitmodules  CMakeLists.txt  README.md
cmake/: libprotobuf-mutator.cmake  libprotobuf.cmake
example/: CMakeLists.txt  bootstramp.cc  harness.c  test.proto  test_fuzzer.cc  test_fuzzer.h
src/: CMakeLists.txt  Mutate.c  Mutate.h  afl-mutator.cc  afl-mutator.h  afl_mutator.cc  afl_mutator.h
src/Fuzzer/: CMakeLists.txt  FuzzerInternal.h  FuzzerLoop.cpp  build.sh
